Feat: Persist PIN, Update Icon, Disable Autofocus on Amount

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -9,7 +9,7 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "gril-logo.png",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png"
         },
