--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -9,7 +9,7 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "logo.png",
+            "src": "/logo.png",
             "sizes": "512x512",
             "type": "image/png"
         },
