--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -10,6 +10,11 @@
     "icons": [
         {
             "src": "/logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/logo.png",
             "sizes": "512x512",
             "type": "image/png"
         },
