feat: Tip Harmony+ rebranding, redesign toasts/dialogs, tea split, and UI refinements

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Tip Harmony",
-    "short_name": "Tip Harmony",
+    "name": "Tip Harmony+",
+    "short_name": "Tip Harmony+",
     "description": "Calculate and distribute daily tips easily.",
     "start_url": "./",
     "display": "standalone",
